bee-exam(v1.9)2021-04-01 21.33.04.663-normal(H2).txt
bee-exam(v1.9)2021-04-01 21.33.08.408-normal(PostgreSQL).txt
bee-exam(v1.9)2021-04-01 21.33.20.953-normal(Microsoft SQL Server).txt

bee-exam(v1.9)2021-04-03 21.55.13.02-normal(MySQL).txt
bee-exam(v1.9)2021-04-03 21.55.27.357-normal(Oracle).txt
bee-exam(v1.9)2021-04-03 21.55.51.369-normal(SQLite).txt
bee-exam(v1.9)2021-04-03 21.56.05.780-normal(H2).txt
bee-exam(v1.9)2021-04-03 21.56.10.191-normal(PostgreSQL).txt
bee-exam(v1.9)2021-04-03 21.56.22.701-normal(Microsoft SQL Server).txt
bee-exam(v1.9)2021-04-03 21.56.30.119-cache(MySQL).txt

bee-exam(v1.9)2021-04-08 00.22.59.444-normal(MySQL).txt
bee-exam(v1.9)2021-04-08 00.23.12.834-normal(Oracle).txt
bee-exam(v1.9)2021-04-08 00.23.36.883-normal(SQLite).txt
bee-exam(v1.9)2021-04-08 00.23.52.876-normal(H2).txt
bee-exam(v1.9)2021-04-08 00.23.57.141-normal(PostgreSQL).txt
bee-exam(v1.9)2021-04-08 00.24.08.533-normal(Microsoft SQL Server).txt
bee-exam(v1.9)2021-04-08 00.24.15.820-cache(MySQL).txt

bee-exam(v1.9)2021-05-02 02.53.30.778-normal(MySQL).txt
bee-exam(v1.9)2021-05-02 02.53.47.666-normal(Oracle).txt
bee-exam(v1.9)2021-05-02 02.54.08.829-normal(SQLite).txt
bee-exam(v1.9)2021-05-02 02.54.26.717-normal(H2).txt
bee-exam(v1.9)2021-05-02 02.54.34.977-normal(PostgreSQL).txt
bee-exam(v1.9)2021-05-02 02.54.55.328-normal(Microsoft SQL Server).txt
bee-exam(v1.9)2021-05-02 02.55.16.45-cache(MySQL).txt

test V1.9.8 with well-known and major database  
bee-exam(v1.9.8)2021-10-22 13.28.59.122-normal(MySQL).txt
bee-exam(v1.9.8)2021-10-22 13.29.18.02-normal(Oracle).txt
bee-exam(v1.9.8)2021-10-22 13.29.41.620-normal(SQLite).txt
bee-exam(v1.9.8)2021-10-22 13.30.00.709-normal(H2).txt
bee-exam(v1.9.8)2021-10-22 13.30.07.72-normal(PostgreSQL).txt
bee-exam(v1.9.8)2021-10-22 13.30.26.941-normal(Microsoft SQL Server).txt
bee-exam(v1.9.8)2021-10-22 13.30.36.536-normal(MySQL).txt
bee-exam(v1.9.8)2021-10-22 13.30.58.799-cache(MySQL).txt